--- a/assets/templates/home/index.html.twig
+++ b/assets/templates/home/index.html.twig
@@ -3,12 +3,12 @@
 {% block content %}
     <div class="row well">
         <div class="col-xs-12 center-block">
-            <form method="post" action="">
+            <form method="get" action="">
                 <div class="col-xs-4 col-xs-offset-4">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="Search for...">
+                        <input type="text" name="q" id="q_field" class="form-control" placeholder="Search for terms...">
                         <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
+                            <button class="btn btn-default" type="submit">
                                 <span class="glyphicon glyphicon-search"></span>
                             </button>
                         </span>
