--- a/assets/templates/home/index.html.twig
+++ b/assets/templates/home/index.html.twig
@@ -3,10 +3,10 @@
 {% block content %}
     <div class="row well">
         <div class="col-xs-12 center-block">
-            <form method="get" action="">
+            <form method="get" action="" id="searchForm">
                 <div class="col-xs-4 col-xs-offset-4">
                     <div class="input-group">
-                        <input type="text" name="q" id="q_field" class="form-control" placeholder="Search for terms...">
+                        <input type="text" name="q" id="q_field" class="form-control" placeholder="Search for terms..." autocomplete="off">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">
                                 <span class="glyphicon glyphicon-search"></span>
@@ -18,25 +18,27 @@
         </div>
 
         <div class="col-xs-12">
-            <ul class="nav nav-tabs">
+            <ul class="nav nav-tabs" id="available-engines">
                 {% for strSEKey, hashSEInfos in hashRegisteredEngines %}
                     {% if hashSEInfos['label'] is defined %}
-                <li role="presentation" class="active"><a href="#">{{ hashSEInfos['label'] }}</a></li>
+                <li role="presentation" class="active" data-type="{{ strSEKey }}"><a href="#">{{ hashSEInfos['label'] }}</a></li>
                     {% endif %}
                 {% endfor %}
             </ul>
 
+            <div id="content-engines">
             {% for strSEKey, hashSEInfos in hashRegisteredEngines %}
                 {% if hashSEInfos['label'] is defined %}
-            <div>
-                <ul>
+                <div data-type="{{ strSEKey }}">
+                    <ul>
                 {% for hashRow in hashContent[strSEKey] %}
-                    <li>{{ hashRow[0] }}</li>
+                        <li>{{ hashRow[0] }}</li>
                 {% endfor %}
-                </ul>
-            </div>
+                    </ul>
+                </div>
                 {% endif %}
             {% endfor %}
+            </div>
         </div>
     </div>
 {% endblock %}
