--- a/assets/templates/base.html.twig
+++ b/assets/templates/base.html.twig
@@ -7,6 +7,7 @@
         {% block stylesheets %}
         <link rel="stylesheet" href="/css/bootstrap.min.css" />
         <link rel="stylesheet" href="/css/jquery-ui.min.css" />
+        <link rel="stylesheet" href="/css/main.css" />
         {% endblock %}
         <title>Search aggregator - RVIP test</title>
     {% endblock %}
