--- a/assets/templates/home/index.html.twig
+++ b/assets/templates/home/index.html.twig
@@ -9,7 +9,7 @@
                         <input type="text" name="q" id="q_field" class="form-control" placeholder="Search for terms..." autocomplete="off">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">
-                                <span class="glyphicon glyphicon-search"></span>
+                                <span class="glyphicon glyphicon-search" id="search-button"></span>
                             </button>
                         </span>
                     </div>
@@ -19,6 +19,7 @@
 
         <div class="col-xs-12">
             <div id="search_parameter">
+                <div class="ajax-loader"></div>
             {% if strSearchedParameter != '' %}
                 <h1>Results for : <strong>{{ strSearchedParameter }}</strong></h1>
             {% endif %}
