Amélioration du pager (instable)

--- a/assets/templates/home/index.html.twig
+++ b/assets/templates/home/index.html.twig
@@ -27,7 +27,7 @@
             <ul class="nav nav-tabs" id="available-engines">
                 {% for strSEKey, hashSEInfos in hashRegisteredEngines %}
                     {% if hashSEInfos['active'] and hashSEInfos['label'] is defined %}
-                <li role="presentation" class="active" data-type="{{ strSEKey }}"><a href="#">{{ hashSEInfos['label'] }}</a></li>
+                <li role="presentation" {% if current_engine == strSEKey %}class="active"{% endif %} data-type="{{ strSEKey }}"><a href="#">{{ hashSEInfos['label'] }}</a></li>
                     {% endif %}
                 {% endfor %}
             </ul>
@@ -35,14 +35,15 @@
             <div id="content-engines" class="col-xs-9">
             {% for strSEKey, hashSEInfos in hashRegisteredEngines %}
                 {% if hashSEInfos['active'] and hashSEInfos['label'] is defined %}
-                <div data-type="{{ strSEKey }}" class="list-group">
+                <div data-type="{{ strSEKey }}" class="list-group{% if current_engine == strSEKey %} active{% endif %}">
 
-                {% for intKey, hashRow in hashContent[strSEKey] %}
+                {% for intKey, hashRow in hashContent[strSEKey]['data'] %}
                     <a href="{{ hashRow[1] }}" class="list-group-item" target="_blank">
-                        <h4 class="list-group-item-heading">[{{  hashContent[strSEKey]|length - intKey }}] - {{ hashRow[0] }}</h4>
+                        <h4 class="list-group-item-heading">[{{ hashContent[strSEKey]['data']|length - intKey }}] - {{ hashRow[0] }}</h4>
                         <p class="list-group-item-text">{{ hashRow[2]|raw }}</p>
                     </a>
                 {% endfor %}
+                    {% include 'global/_pager.html.twig' with {'strCurrentEngine': strSEKey, 'strUrl' : '/home/index'} %}
                 </div>
                 {% endif %}
             {% endfor %}
