--- a/assets/templates/home/index.html.twig
+++ b/assets/templates/home/index.html.twig
@@ -6,7 +6,7 @@
             <form method="get" action="" id="searchForm">
                 <div class="col-xs-4 col-xs-offset-4">
                     <div class="input-group">
-                        <input type="text" name="q" id="q_field" class="form-control" placeholder="Search for terms..." autocomplete="off">
+                        <input type="text" name="q" id="q_field" class="form-control" placeholder="Search for terms..." autocomplete="off" value="{{ strSearchedParameter }}">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="submit">
                                 <span class="glyphicon glyphicon-search" id="search-button"></span>
@@ -24,11 +24,12 @@
                 <h1>Results for : <strong>{{ strSearchedParameter }}</strong></h1>
             {% endif %}
             </div>
+
             <ul class="nav nav-tabs" id="available-engines">
                 {% for strSEKey, hashSEInfos in hashRegisteredEngines %}
                     {% if hashSEInfos['active'] and hashSEInfos['label'] is defined %}
-                <li role="presentation" {% if current_engine == strSEKey %}class="active"{% endif %} data-type="{{ strSEKey }}">
-                    <a href="?engine={{ strSEKey }}">{{ hashSEInfos['label'] }}</a>
+                <li role="presentation" {% if current_engine == strSEKey %}class="active"{% endif %}>
+                    <a href="?engine={{ strSEKey }}" data-type="{{ strSEKey }}">{{ hashSEInfos['label'] }}</a>
                 </li>
                     {% endif %}
                 {% endfor %}
