Bugfixes pager + nettoyage

--- a/assets/templates/home/index.html.twig
+++ b/assets/templates/home/index.html.twig
@@ -29,7 +29,7 @@
                 {% for strSEKey, hashSEInfos in hashRegisteredEngines %}
                     {% if hashSEInfos['active'] and hashSEInfos['label'] is defined %}
                 <li role="presentation" {% if current_engine == strSEKey %}class="active"{% endif %}>
-                    <a href="?engine={{ strSEKey }}" data-type="{{ strSEKey }}">{{ hashSEInfos['label'] }}</a>
+                    <a href="?engine={{ strSEKey }}">{{ hashSEInfos['label'] }}</a>
                 </li>
                     {% endif %}
                 {% endfor %}
@@ -38,11 +38,11 @@
             <div id="content-engines" class="col-xs-9">
             {% for strSEKey, hashSEInfos in hashRegisteredEngines %}
                 {% if hashSEInfos['active'] and hashSEInfos['label'] is defined %}
-                <div data-type="{{ strSEKey }}" class="list-group{% if current_engine == strSEKey %} active{% endif %}">
+                <div class="list-group{% if current_engine == strSEKey %} active{% endif %}">
 
                 {% for intKey, hashRow in hashContent[strSEKey]['data'] %}
                     <a href="{{ hashRow[1] }}" class="list-group-item" target="_blank">
-                        <h4 class="list-group-item-heading">[{{ hashContent[strSEKey]['data']|length - intKey }}] - {{ hashRow[0] }}</h4>
+                        <h4 class="list-group-item-heading">{{ hashRow[0] }}</h4>
                         <p class="list-group-item-text">{{ hashRow[2]|raw }}</p>
                     </a>
                 {% endfor %}
