--- a/assets/templates/base.html.twig
+++ b/assets/templates/base.html.twig
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="/css/jquery-ui.min.css" />
         <link rel="stylesheet" href="/css/main.css" />
         {% endblock %}
-        <title>Search aggregator - RVIP test</title>
+        <title>Search aggregator - R-VIP</title>
     {% endblock %}
 </head>
 <body>
